# back/services/gateway/internal/handler/follow/checkfollowstatushandler.go
@@ -1,0 +1,31 @@
+// Code scaffolded by goctl. Safe to edit.
+// goctl 1.9.2
+
+package follow
+
+import (
+	"net/http"
+
+	"SLGaming/back/services/gateway/internal/logic/follow"
+	"SLGaming/back/services/gateway/internal/svc"
+	"SLGaming/back/services/gateway/internal/types"
+	"github.com/zeromicro/go-zero/rest/httpx"
+)
+
+func CheckFollowStatusHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.CheckFollowStatusRequest
+		if err := httpx.Parse(r, &req); err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+
+		l := follow.NewCheckFollowStatusLogic(r.Context(), svcCtx)
+		resp, err := l.CheckFollowStatus(&req)
+		if err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+		} else {
+			httpx.OkJsonCtx(r.Context(), w, resp)
+		}
+	}
+}
